--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,10 +1,6 @@
 @import "variables";
 @import "mixins";
 
-.z-on-top {
-  z-index: 100;
-}
-
 html {
   width: 100%;
   height: 100%;
